--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node_modules/eslint/bin/eslint.js src",
     "build": "babel src -d lib",
-    "start": "babel src -d lib && babel-watch lib/index.js -w src",
-    "debugger": "babel src -d lib && babel-node lib/index.js"
+    "start": "babel-watch src/index.js -w src"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.0",
-    "babel-watch": "^2.0.7"
+    "babel-watch": "^2.0.7",
+    "eslint": "^4.5.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-config-walmart": "^1.2.4"
   },
   "dependencies": {
+    "babel-eslint": "^7.2.3",
     "body-parser": "^1.17.2",
+    "eslint-plugin-filenames": "^1.2.0",
     "express": "^4.15.4"
   }
 }
