--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.6.0",
     "babel-watch": "^2.0.7",
     "eslint": "^4.5.0",
@@ -22,6 +23,7 @@
     "babel-eslint": "^7.2.3",
     "body-parser": "^1.17.2",
     "eslint-plugin-filenames": "^1.2.0",
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "mysql": "^2.14.1"
   }
 }
