--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-watch": "^2.0.7",
     "eslint": "^4.5.0",
-    "eslint-config-google": "^0.9.1",
     "eslint-config-walmart": "^1.2.4"
   },
   "dependencies": {
     "babel-eslint": "^7.2.3",
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.17.2",
     "eslint-plugin-filenames": "^1.2.0",
     "express": "^4.15.4",
+    "http-status-codes": "^1.2.0",
+    "jsonwebtoken": "^7.4.3",
     "mysql": "^2.14.1"
   }
 }
