--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "dependencies": {
     "babel-eslint": "^7.2.3",
     "babel-polyfill": "^6.26.0",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
     "eslint-plugin-filenames": "^1.2.0",
     "express": "^4.15.4",
     "http-status-codes": "^1.2.0",
     "jsonwebtoken": "^7.4.3",
+    "mongodb": "^2.2.31",
     "mysql": "^2.14.1"
   }
 }
