--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-rest-mongo",
-  "version": "0.0.2",
-  "description": "Mongo prebaked with OAuth and a Rest API!",
+  "version": "0.0.3",
+  "description": "Mongo prebaked with authentication and a Rest API!",
   "main": "index.js",
   "scripts": {
     "test": "node_modules/eslint/bin/eslint.js src",
