--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "node_modules/eslint/bin/eslint.js src",
     "build": "babel src -d lib",
-    "start": "babel-watch src/index.js -w src"
+    "start": "babel-watch src/index.js -w src",
+    "prod": "npm run build && node lib/index.js"
   },
   "author": "",
   "license": "ISC",
