--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "express-rest-mongo",
   "version": "0.0.5",
+  "url": "https://www.npmjs.com/package/express-rest-mongo",
   "description": "Mongo prebaked with authentication and a Rest API!",
   "main": "index.js",
   "scripts": {
