added key words and npm badge, tests to come next

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-rest-mongo",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "url": "https://www.npmjs.com/package/express-rest-mongo",
   "description": "Mongo prebaked with authentication and a Rest API!",
   "main": "lib/express-rest-mongo.js",
@@ -8,6 +8,14 @@
     "type": "git",
     "url": "https://github.com/mcrowder65/express-rest-mongo"
   },
+  "keywords": [
+    "express",
+    "node",
+    "rest",
+    "mongo",
+    "mongodb",
+    "api"
+  ],
   "scripts": {
     "test": "node_modules/eslint/bin/eslint.js src",
     "build": "babel src -d lib",
