--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: node_js
 node_js: 6.11.2
 test:
-  - npm test
+  - ./run-tests-and-publish.sh
 install:
   - npm install
-coveralls:
-  - npm run coveralls
