--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "mocha": "istanbul cover --include-all-sources --root src --report text --report lcov node_modules/mocha/bin/_mocha -- -c --opts mocha.opts test",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
+  "pre-commit": [
+    "build"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -57,6 +60,7 @@
     "istanbul": "^1.1.0-alpha.1",
     "mocha": "^4.0.1",
     "mongodb-runner": "^3.6.1",
+    "pre-commit": "^1.2.2",
     "unique-string": "^1.0.0"
   }
 }
