--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint": "^4.5.0",
     "eslint-config-walmart": "^1.2.4",
     "eslint-plugin-filenames": "^1.2.0",
+    "eslint-plugin-jest": "^21.3.2",
     "jest": "^21.2.1",
     "mongodb-runner": "^3.6.1",
     "pre-commit": "^1.2.2",
