--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-jest": "^21.3.2",
     "jest": "^21.2.1",
     "mongodb-runner": "^3.6.1",
+    "node-fetch": "^1.7.3",
     "pre-commit": "^1.2.2",
     "unique-string": "^1.0.0"
   }
